[package]
name = "midnight_girls"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version="4", default-features = false, features = ["macros"] }
actix-files = "0"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
upon = { version = "0", default-features = false, features = ["serde"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
